--- a/app/src/main/res/layout/activity_related_articles.xml
+++ b/app/src/main/res/layout/activity_related_articles.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,7 +7,7 @@
     tools:context=".RelatedArticles"
     tools:deviceIds="wear">
 
-    <fragment
+    <androidx.fragment.app.FragmentContainerView
         android:id="@+id/frg_related"
         android:name="com.jnich.homework3.ArticleList"
         android:layout_width="match_parent"
